[tool.poetry]
name = "mla"
version = "0.1.0"
description = ""
authors = ["markshao <shaoyuliang@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tushare = "^1.4.14"
python-dotenv = "^1.0.1"
sqlmodel = "^0.0.22"
click = "^8.1.8"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
